--- a/base-ds-ml/requirements.txt
+++ b/base-ds-ml/requirements.txt
@@ -1,48 +1,58 @@
 #apache-airflow
+
 #csaps==1.0.0
+
 dtaidistance==1.2.3
-geopandas==0.4.1
-# geopandas==0.7 # without warning 'FutureWarning: '+init=<authority>:<code>' syntax is deprecated.'
+
+#geopandas==0.4.1
+#geopandas==0.7 # without warning 'FutureWarning: '+init=<authority>:<code>' syntax is deprecated.'
+#grpcio==1.27.1
+#grpcio-tools==1.27.1
+
 #h5py==2.10.0
 hdbscan==0.8.23
 #hyperopt==0.2.3
+
 #influxdb==5.2.3
 ipython==7.16.1
 #isodate==0.6.0
+
 #joblib==0.16.0
-jupyterlab==2.1.4
+#jupyterlab is already installed in Dockerfile
+jupyterlab==2.2.9
+
 #librosa==0.6.3
+
 matplotlib==3.0.3
-numba==0.48.0
+
+#numba==0.48.0
 numpy==1.18.1
+
 pandas==0.25.3
 plotly==2.4.1
 pyculiarity==0.0.7
-pyproj==2.6.0
+#pyproj==2.6.0
 pytest==4.3.1
 python-json-logger==0.1.10
 PyYAML==5.3.1
-requests==2.22.0
-scikit-learn==0.22.2.post1
+
+#requests==2.22.0
+
+scikit-learn==0.23.2
 scipy==1.4.1
 seaborn==0.11.0
-shapely==1.7.0
+#shapely==1.7.0
 sphinx==3.1.2
 sphinx-autobuild==0.7.1
 sphinx_rtd_theme==0.5.0
 sphinxcontrib-napoleon==0.7
 statsmodels==0.11.1
+
+# tensorflow dependencies are already installed in Dockerfile
 tables==3.6.1
-
 #timesynth==0.2.4
-
-torch==1.6.0
-torchvision==0.7.0
-pillow==7.2.0
+# torch, torchvision, pillow and torchaudio are installed in Dockerfile
 
 #tqdm==4.42.0
-tsfresh==0.15.1
+#tsfresh==0.15.1
 tslearn==0.4.1
-
-#grpcio==1.27.1
-#grpcio-tools==1.27.1
