finish docker ml base

--- a/base-ds-ml/Dockerfile
+++ b/base-ds-ml/Dockerfile
@@ -5,14 +5,15 @@ FROM tensorflow/tensorflow:2.3.1-gpu
 
 # Already installed python packages:
 #   tensorflow-gpu==2.3.1 (NOT tensorflow==2.3.1)
+RUN python3 -m pip install tensorflow==2.3.1
 
 # fix (tzdata)
 ARG DEBIAN_FRONTEND=noninteractive
 
-#
+# USEFUL APPS
 RUN apt-get install -y locales git r-base vim
 
-# nodejs (enable extension for jupyter notebook)
+# NODEJS (enable extension for jupyter notebook)
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash -
 RUN apt-get install -y nodejs
 # fix UnicodeDecodeError
@@ -24,11 +25,32 @@ RUN python3 -m pip install --upgrade pip && \
     python3 -m pip install -r requirements.txt
 COPY . .
 
-## Jupyter notebook's extensions
-# RUN python3 -m jupyter labextension install @jupyterlab/toc
+## Jupyter lab + its extensions
+RUN python3 -m pip install jupyterlab==2.2.9
+RUN jupyter labextension install @jupyterlab/toc
 
 # TORCH
 RUN pip3 install torch==1.7.0+cu101 torchvision==0.8.1+cu101 torchaudio==0.7.0 -f https://download.pytorch.org/whl/torch_stable.html
+
+# OPENSSH
+# RUN apt-get install -y openssh-server
+# RUN mkdir /var/run/sshd
+# RUN echo 'root:qwerty' | chpasswd
+# RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+# # SSH login fix. Otherwise user is kicked off after login
+# RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
+# # need?
+# ENV NOTVISIBLE "in users profile"
+# RUN echo "export VISIBLE=now" >> /etc/profile
+# # Export port ssh
+# EXPOSE 22
+# CMD $(which sshd) -Ddp 22
+
+# ALIAS
+
+
+# Only display 3 last folder in the path
+RUN echo 'PROMPT_DIRTRIM=3' >> ~/.bashrc
 
 # Run jupyter notebook
 CMD /bin/bash -c 'jupyter lab --no-browser --allow-root --ip=0.0.0.0 --NotebookApp.token="" --NotebookApp.password=""'
