--- a/base-ds-ml/requirements.txt
+++ b/base-ds-ml/requirements.txt
@@ -24,7 +24,7 @@ joblib==0.17.0
 matplotlib==3.3.2
 
 # numba==0.48.0
-numpy==1.19.3
+# numpy is already installed with tensorflow
 
 pandas==1.1.3
 plotly==4.12.0
