--- a/base-ds-ml/docker-compose.yml
+++ b/base-ds-ml/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: 'docker_ai'
     image: img_base_ml_data
     volumes:
+        - ../../testing-notebooks/:/learning/testing-notebooks/
         - ../../deeplearning.ai-courses/:/learning/deeplearning.ai-courses/
         - ../../data-science-learning/:/learning/data-science-learning/
     ports:
