--- a/dataswati/requirements.txt
+++ b/dataswati/requirements.txt
@@ -37,9 +37,9 @@ statsmodels==0.11.1
 tables==3.6.1
 timesynth==0.2.4
 
-torch==1.6.0
-torchvision==0.7.0
-pillow==7.2.0
+#torch==1.6.0
+#torchvision==0.7.0
+#pillow==7.2.0
 
 tqdm==4.42.0
 tsfresh==0.15.1
