--- a/docker-ai/tf-2.4.0-backup/docker-compose.yml
+++ b/docker-ai/tf-2.4.0-backup/docker-compose.yml
@@ -4,10 +4,9 @@ services:
     container_name: 'docker_ai'
     image: img_docker_ai
     volumes:
-        - ../../../git/:/git/
+        - ../../../git/:/learning/
     ports:
-        - 9999:8888 # exposed port for jupyter
-        - "6789:22"
+        - 8888:8888 # exposed port for jupyter
     #runtime: nvidia
     working_dir: /learning/
     #restart: always # start with system
