fix gpu is not detected

--- a/docker-ai/docker-compose.yml
+++ b/docker-ai/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
         - 8888:8888 # exposed port for jupyter
         - "6789:22"
-    #runtime: nvidia
+    runtime: nvidia
     working_dir: /git/
     #restart: always # start with system
-    environment:
-        - NVIDIA_VISIBLE_DEVICES=0 # which gpu do you want to use for this container
+    # environment:
+    #     - NVIDIA_VISIBLE_DEVICES=0 # which gpu do you want to use for this container
