--- a/docker-ai/m1/requirements.txt
+++ b/docker-ai/m1/requirements.txt
@@ -11,3 +11,5 @@ scikit-learn==0.24.2
 seaborn==0.11.1
 scipy==1.7.0
 # tensorflow-metal==0.1.1 # already installed, it goes with tf 2.5.0
+torch
+torchvision
