[Big change] Update tf291 + cu113 + cudnn8 + torch 11.2
Add checking


chores

--- a/docker-ai/Dockerfile.cu113-torch112-u2004
+++ b/docker-ai/Dockerfile.cu113-torch112-u2004
@@ -32,7 +32,7 @@ RUN PATH="$PATH:/usr/bin/zsh"
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 
 # TORCH
-RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
+RUN pip3 install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 
 # OPENSSH
 RUN apt-get install -y openssh-server
