--- a/docker-ai/cu113-tf26-torch112-ubuntu1804-12GB/Dockerfile
+++ b/docker-ai/cu113-tf26-torch112-ubuntu1804-12GB/Dockerfile
@@ -22,7 +22,7 @@ RUN echo 'PROMPT_DIRTRIM=3' >> ~/.bashrc
 
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install jupyterlab==3.4.5
-RUN pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
+RUN pip3 install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 
 
 # requirements
